--- a/LetsGoTes/LetsGoTes/Info.plist
+++ b/LetsGoTes/LetsGoTes/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>add photos to your app</string>
 </dict>
 </plist>
